--- a/app/src/main/res/layout/dialog_image_preview.xml
+++ b/app/src/main/res/layout/dialog_image_preview.xml
@@ -59,7 +59,7 @@
             <ImageView
                 android:id="@+id/galleryImage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="300dp"
                 android:contentDescription="@null"
                 android:scaleType="fitCenter" />
 
