--- a/app/src/main/res/layout/item_suggested_edits_contributions.xml
+++ b/app/src/main/res/layout/item_suggested_edits_contributions.xml
@@ -15,8 +15,7 @@
 
         <FrameLayout
             android:layout_width="16dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="16dp">
+            android:layout_height="match_parent">
 
             <View
                 android:layout_width="1dp"
