--- a/app/src/main/res/layout/view_reading_list_page_actions.xml
+++ b/app/src/main/res/layout/view_reading_list_page_actions.xml
@@ -114,6 +114,34 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/reading_list_item_move_to_other"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/list_item_horizontal_padding"
+            android:layout_marginEnd="@dimen/list_item_horizontal_padding"
+            android:contentDescription="@null"
+            android:tint="?attr/secondary_text_color"
+            app:srcCompat="@drawable/ic_bookmark_white_24dp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="54dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:paddingStart="@dimen/list_item_horizontal_padding"
+            android:paddingEnd="@dimen/list_item_horizontal_padding"
+            android:text="@string/reading_list_move_to_other_list"
+            android:textColor="?attr/primary_text_color"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/reading_list_item_select"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
