--- a/app/src/main/res/layout/dialog_add_to_reading_list.xml
+++ b/app/src/main/res/layout/dialog_add_to_reading_list.xml
@@ -10,6 +10,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/dialog_title"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:gravity="center_vertical"
