"focusable" helps accessibility

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -121,6 +121,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom|center_horizontal"
                         android:clickable="true"
+                        android:focusable="true"
                         android:padding="8dp"
                         android:text="@string/privacy_policy_description"
                         android:textColor="?attr/colorAccent" />
