--- a/app/src/main/res/layout/fragment_random_item.xml
+++ b/app/src/main/res/layout/fragment_random_item.xml
@@ -40,9 +40,10 @@
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
+            android:focusable="true"
             android:orientation="vertical">
 
-            <org.wikipedia.views.FaceAndColorDetectImageView
+        <org.wikipedia.views.FaceAndColorDetectImageView
                 android:id="@+id/view_random_article_card_image"
                 style="@style/ImageViewDefault"
                 android:layout_width="match_parent"
