--- a/app/src/main/res/layout/view_reading_lists_overflow.xml
+++ b/app/src/main/res/layout/view_reading_lists_overflow.xml
@@ -39,6 +39,7 @@
             style="@style/OverflowMenuItem"
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
+            android:focusable="true"
             android:gravity="center_vertical"
             android:minHeight="48dp"
             android:orientation="vertical"
