--- a/app/src/main/res/layout/view_search_bar.xml
+++ b/app/src/main/res/layout/view_search_bar.xml
@@ -31,6 +31,7 @@
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:contentDescription="@string/search_hint_voice_search"
+        android:focusable="true"
         android:scaleType="center"
         app:srcCompat="@drawable/ic_mic_black_24dp"
         app:tint="?attr/material_theme_secondary_color" />
