--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,7 +2,6 @@
 <resources>
     <attr name="toolbar_title_color" format="reference"/>
     <attr name="toolbar_icon_color" format="reference"/>
-    <attr name="page_expanded_status_bar_color" format="reference"/>
     <attr name="themed_icon_color" format="reference"/>
     <attr name="edit_improve_tag_selected_drawable" format="reference" />
     <attr name="edit_improve_tag_unselected_drawable" format="reference" />
@@ -41,6 +40,7 @@
     <attr name="chip_background_color" format="color"/>
     <attr name="chip_text_color" format="color"/>
     <attr name="suggestions_background_color" format="color"/>
+    <attr name="color_group_22" format="reference"/>
     <attr name="color_group_52" format="color"/>
     <attr name="color_group_53" format="color"/>
     <attr name="color_group_54" format="color"/>
