--- a/app/src/main/res/values/styles_light.xml
+++ b/app/src/main/res/values/styles_light.xml
@@ -42,7 +42,6 @@
         <!-- Overrides of our own custom color attributes -->
         <item name="toolbar_title_color">@color/black87</item>
         <item name="toolbar_icon_color">@color/base30</item>
-        <item name="page_expanded_status_bar_color">@color/base90</item>
         <item name="themed_icon_color">@color/accent50</item>
         <item name="nav_tab_background_color">@color/base100</item>
         <item name="nav_tab_item_color_state">@color/color_state_nav_tab_light</item>
@@ -70,6 +69,7 @@
         <item name="tab_placeholder_text_color">@color/base80</item>
         <item name="chip_background_color">@color/base80</item>
         <item name="chip_text_color">@color/base20</item>
+        <item name="color_group_22">@color/base90</item>
         <item name="color_group_52">@color/accent75</item>
         <item name="color_group_53">@color/accent90</item>
         <item name="color_group_54">@color/accent90</item>
