--- a/app/src/main/res/values/strings_no_translate.xml
+++ b/app/src/main/res/values/strings_no_translate.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">@string/app_name_prod</string>
+<resources>
+<string name="app_name">@string/app_name_prod</string>
     <string name="channel" />
     <string name="appcenter_id">eb167874-c1d6-5694-30a9-bcfd71d4c24d</string>
 
