--- a/app/src/main/res/drawable/ic_icon_move_to_another_reading_list.xml
+++ b/app/src/main/res/drawable/ic_icon_move_to_another_reading_list.xml
@@ -9,7 +9,7 @@
       android:fillAlpha="0"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="M17,3c1.1,0 2,0.9 2,2v16l-7,-3 -7,3 0.01,-16c0,-1.1 0.89,-2 1.99,-2zM12.5,7v2.5h-4v2h4L12.5,14l3.5,-3.5L12.5,7z"
+      android:pathData="M17,3c1.1,0 2,0.9 2,2v16l-7,-3 -7,3 0.01,-16c0,-1.1 0.89,-2 1.99,-2zM13,7v2.5L8,9.5v2h5L13,14l3.5,-3.5L13,7z"
       android:fillColor="#000"
       android:fillType="nonZero"/>
 </vector>
