--- a/app/src/main/res/drawable/rounded_12dp_corner_base90_fill.xml
+++ b/app/src/main/res/drawable/rounded_12dp_corner_base90_fill.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="12dp" />
-    <solid android:color="@color/base90"/>
+    <solid android:color="?attr/color_group_22"/>
 </shape>
