--- a/app/src/main/res/menu/menu_reading_list_page_toggle.xml
+++ b/app/src/main/res/menu/menu_reading_list_page_toggle.xml
@@ -3,6 +3,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_add_to_other_list"
         android:title="@string/reading_list_add_to_other_list"/>
+    <item android:id="@+id/menu_move_to_another_list"
+        android:title="@string/reading_list_move_from_to_other_list"/>
     <item android:id="@+id/menu_remove_from_lists"
         android:title="@string/reading_list_remove_from_lists"/>
 </menu>
