--- a/app/src/main/res/layout/item_suggested_edits_contributions.xml
+++ b/app/src/main/res/layout/item_suggested_edits_contributions.xml
@@ -10,8 +10,7 @@
         android:layout_height="match_parent"
         android:background="?attr/selectableItemBackground"
         android:orientation="horizontal"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp">
+        android:paddingStart="16dp">
 
         <FrameLayout
             android:layout_width="16dp"
@@ -27,7 +26,7 @@
                 android:id="@+id/contributionIcon"
                 android:layout_width="match_parent"
                 android:layout_height="16dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="26dp"
                 android:contentDescription="@null"
                 android:tint="?attr/colorAccent"
                 app:srcCompat="@drawable/ic_article_description" />
@@ -37,7 +36,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
+            android:layout_marginBottom="24dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -91,8 +92,9 @@
         <ImageView
             android:id="@+id/image"
             style="@style/ImageViewDefault"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="@dimen/list_item_horizontal_padding"
             android:contentDescription="@null" />
