Update disabled status cards design

--- a/app/src/main/res/layout/view_suggested_edits_disabled_states.xml
+++ b/app/src/main/res/layout/view_suggested_edits_disabled_states.xml
@@ -1,61 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/encourageAccountCreationView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="16dp"
-    android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="92dp"
-        android:layout_marginBottom="24dp"
-        android:contentDescription="@null"
-        app:srcCompat="@drawable/ic_suggested_edits_disabled" />
-
-    <TextView
-        android:id="@+id/messageTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:lineSpacingExtra="8sp"
-        android:textColor="?attr/material_theme_primary_color"
-        android:textSize="16sp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="16dp"
-        android:background="?attr/list_separator_drawable" />
+    android:layout_height="wrap_content"
+    android:layout_marginTop="23dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="16dp"
+    app:cardBackgroundColor="?attr/paper_color"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="2dp">
 
     <LinearLayout
-        android:id="@+id/linkContainer1"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="?attr/selectableItemBackground"
-        android:gravity="center_vertical">
-
-        <TextView
-            android:id="@+id/linkText1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/suggested_edits_help_page_link_text"
-            android:textColor="?attr/colorAccent"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="16dp">
 
         <ImageView
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:contentDescription="@null"
-            android:tint="?attr/colorAccent"
-            app:srcCompat="@drawable/ic_open_in_new_black_24px" />
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@null" />
+
+        <TextView
+            android:id="@+id/cardTitleView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="bold"
+            android:textColor="?attr/material_theme_primary_color"
+            android:lineSpacingExtra="8sp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="12dp"/>
+
+        <TextView
+            android:id="@+id/cardContentView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
+            android:textColor="?attr/material_theme_secondary_color"
+            android:lineSpacingExtra="8sp"
+            android:text="@string/suggested_edits_encourage_account_creation_message"
+            android:layout_marginBottom="4dp"/>
+
+        <Button
+            android:id="@+id/actionButton"
+            style="@style/FlatButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
-    <View
-        android:id="@+id/linksDivider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="?attr/list_separator_drawable" />
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
