--- a/app/src/main/res/values/styles_light.xml
+++ b/app/src/main/res/values/styles_light.xml
@@ -82,6 +82,13 @@
         <item name="color_group_61">@color/black26</item>
         <item name="action_mode_green_background">@color/green50</item>
         <item name="image_tags_onboarding_image">@drawable/ic_image_tags_onboarding_light</item>
+        <item name="reward_interstitial_calendar_drawable">@drawable/ic_illustration_calendar_light</item>
+        <item name="reward_interstitial_heart_drawable">@drawable/ic_illustration_heart_light</item>
+        <item name="reward_interstitial_view_drawable">@drawable/ic_illustration_views_light</item>
+        <item name="reward_interstitial_quality_perfect_drawable">@drawable/ic_illustration_quality_perfect_light</item>
+        <item name="reward_interstitial_quality_excellent_drawable">@drawable/ic_illustration_quality_excellent_light</item>
+        <item name="reward_interstitial_quality_very_good_drawable">@drawable/ic_illustration_quality_very_good_light</item>
+        <item name="reward_interstitial_quality_good_drawable">@drawable/ic_illustration_quality_good_light</item>
 
         <!-- Background for cards, lists, and controls -->
         <item name="paper_color">@color/base100</item>
