Add vibration and sound when visible

--- a/app/src/main/res/layout/fragment_suggested_edits_rewards_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_rewards_item.xml
@@ -13,7 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="fitCenter"
-        android:contentDescription="@null"/>
+        android:contentDescription="@null"
+        android:hapticFeedbackEnabled="true" />
 
     <TextView
         android:id="@+id/rewardText"
