Further experimentation with card designs.
Change-Id: I9e852fb5d4908337a763f8ebcf2ff3a7872d3ed5

--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -44,13 +44,15 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <androidx.cardview.widget.CardView
+                    <com.google.android.material.card.MaterialCardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/activity_horizontal_margin"
                         android:layout_marginEnd="@dimen/activity_horizontal_margin"
                         android:layout_marginTop="8dp"
-                        app:cardElevation="6dp"
+                        app:strokeColor="@color/accent30"
+                        app:strokeWidth="1dp"
+                        app:cardElevation="0dp"
                         app:cardBackgroundColor="?attr/paper_color"
                         app:cardCornerRadius="12dp">
 
@@ -154,7 +156,7 @@
                                 android:textSize="@dimen/suggested_edits_message_textview_text_size" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
-                    </androidx.cardview.widget.CardView>
+                    </com.google.android.material.card.MaterialCardView>
 
                     <TextView
                         android:id="@+id/contributeSubtitleView"
